Fix: Header section z-index to make sure it is above every section

--- a/src/sections/header/Header.module.css
+++ b/src/sections/header/Header.module.css
@@ -3,6 +3,7 @@
 	position: fixed;
 	top: 0;
 	padding: 1.5rem;
+	z-index: 10;
 
 	.innerHeader {
 		display: flex;
